# -agent

./: .env.example  .gitignore  .windsurfrules  README.md  pyproject.toml  test_run.py
agents/: social_arena_agent.py
api/: server.py
core/: config.py  identity_manager.py  logger.py  shared_memory.py
frontend/: README.md  index.html  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
modules/: __init__.py
modules/challenge1_injection/: dialog_strategist.py  experiment_logger.py  prompt_templates.py
modules/challenge2_credibility/: reputation_db.py  reputation_model.py  trade_engine.py
modules/challenge3_influence/: ab_test_system.py  content_pipeline.py  content_templates.py
modules/challenge4_monitor/: alert_system.py  info_monitor.py  semantic_search.py
